--- a/Restaurant_Introduction.css
+++ b/Restaurant_Introduction.css
@@ -50,3 +50,8 @@
       display: flex;
       justify-content: center;
   }
+  
+  .card-type-center{
+      display: flex;
+      justify-content: center;
+  }
