--- a/main.css
+++ b/main.css
@@ -1,87 +1,16 @@
-/* body {
-    background: var(--bg);
-    color: var(--fontColor);
-    font-family: helvetica;
-}
-
-ul {
-    font-family: helvetica;
-}
-
-li {
-    list-style: circle;
-  }
-  
-.list {
-    list-style: square;
-}
-  
-#msg {
-    font-family: monospace;
-}
-
-:root {
-    --green: #00FF00;
-    --white: #FFFFFF;
-    --black: #000000;
-}
-
-.light-theme {
-    color: #000000;
-    background: #514ab9;
-    --bg: var(--green);
-    --fontColor: var(--black);
-    --btnBg: var(--black);
-    --btnFontColor: var(--white);
-}
-
-.dark-theme {
-    --bg: var(--black);
-    --fontColor: var(--green);
-    --btnBg: var(--white);
-    --btnFontColor: var(--black);
-}
-
-.btn {
-    position: absolute;
-    top: 20px;
-    left: 250px;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    border: none;
-    color: var(--btnFontColor);
-    background-color: var(--btnBg);
-}
-
-.text{
-    /* 色碼設定 */
-      /* background-color:#000;  */
-    /* RGB設定 */
-      /* background-color:rgb(0,0,0); */
-    /* 顏色名稱設定 */
-      /* background-color:black;  */
-      /* color:#fff;
-      padding:5px 10px;
-    width:120px;
-}
-
-.bg-single{
-    background-image: url('C:\Users\a4331\OneDrive\桌面\simple-website\1.jpg'), url('C:\Users\a4331\OneDrive\桌面\simple-website\2.jpg');
-    width: 100%;
-    height: 100vh;
-    background-size: 45%, cover;
-    background-position: 80% bottom,center bottom;
+body {
+    /*背景圖片位置 */
+    background-size: 100%;
+    /*圖片寬度為螢幕的100%*/
     background-repeat: no-repeat;
-} */ 
-
-
-h1,h2,h3,h4,h5,h6{
+    /* 不重複圖片*/
+} 
+h2,h3,h4,h5,h6{
     font-family: 'Noto Sans TC', sans-serif;
 }
 
 p,a,input,label,textarea,span,ul,li{
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -104,12 +33,90 @@ p,a,input,label,textarea,span,ul,li{
     transform: translateY(-50%);
     
 }
-p{
-    color:rgb(107, 101, 101);
+p1{  font-size: 42px;
+    color: rgb(23, 184, 76);    
 }
-p1{
+p2{
     font-size: 36px;
+    color: rgb(221, 28, 153);
 }
-p.lead{
-    color: black;
+p3{
+    font-size: 36px;
+    color:aliceblue;
 }
+p4{
+    font-size: 48px;
+    color:rgb(36, 175, 175);
+    font-family: 'Noto Sans TC', sans-serif;
+    color:transparent;
+    font-size: 3em;
+    background: linear-gradient(to right, #0000, #65a22fd2, #000);
+    -webkit-background-clip: text;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    animation: move 3s linear infinite;
+}
+.box{
+    width: 200px;
+    height: 200px;
+    background: #ecd6c7;
+    margin: 0 auto;/*區塊置中*/
+  }
+img-map{
+    width: 200px;
+    height: 200px;
+    background-repeat: no-repeat;
+}
+ul{
+    font-size: 24px;
+}
+h1{
+    font-family: 'Noto Sans TC', sans-serif;
+    color:transparent;
+    font-size: 3em;
+    background: linear-gradient(to right, #0000, #65a22fd2, #000);
+    -webkit-background-clip: text;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    animation: move 3s linear infinite;
+}
+
+@keyframes move{
+    0%{
+        background-position: -500%;
+    }
+    100%{
+        background-position: 500%;
+    }
+}
+
+/* .article{
+    width: 960px;
+    margin: 0 auto;
+    height: 400px;
+    padding: 40px;
+    font: 24px 'Arial';
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+    line-height: 28px;
+}
+.section1{
+    color:#fff;
+    background-image:url(ForfunProject.github.io\pic\1.jpg) ;
+    text-shadow: 5px 4px 5px #575353;
+    font-weight: bold;
+}
+.section2{
+    color:#fff;
+    background-image:url(ForfunProject.github.io\pic\02-1.jpg) ;
+    text-shadow: 3px 4px 5px #373030;
+    font-weight: bold;
+}
+.section3{
+    color:#fff;
+    background-image:url(ForfunProject.github.io\pic\2.jpg) ;
+    text-shadow: 3px 4px 5px #373030;
+    font-weight: bold;
+} */
