--- a/main.css
+++ b/main.css
@@ -34,11 +34,13 @@ p,a,input,label,textarea,span,ul,li{
     
 }
 p1{  font-size: 42px;
-    color: rgb(23, 184, 76);    
+    color: gold;
+    text-shadow: 2px 4px 3px black;    
 }
 p2{
     font-size: 36px;
-    color: rgb(221, 28, 153);
+    color: gold;
+    text-shadow: 2px 4px 3px black;
 }
 p3{
     font-size: 36px;
