add background picture

--- a/menu.css
+++ b/menu.css
@@ -9,3 +9,7 @@
     display: flex;
     justify-content: center;
 }
+.bachground-pic{
+    background-image:url('https://drive.google.com/uc?id=1m9GrvkwRcJetHV8KnTjrMAZ6wrXBgz0P');
+    background-repeat:no-repeat;
+}
