--- a/main.css
+++ b/main.css
@@ -34,12 +34,12 @@ p,a,input,label,textarea,span,ul,li{
     
 }
 p1{  font-size: 42px;
-    color: gold;
+    color: rgb(172, 198, 22);
      
 }
 p2{
     font-size: 36px;
-    color: gold;
+    color: rgb(108, 18, 177);
    
 }
 p3{
