--- a/main.css
+++ b/main.css
@@ -9,8 +9,12 @@ h2,h3,h4,h5,h6{
     font-family: 'Noto Sans TC', sans-serif;
 }
 
-p,a,input,label,textarea,span,ul,li{
+p,input,label,textarea,span,ul,li{
     font-family: 'Open Sans', sans-serif;
+}
+a{
+    font-family: 'Open Sans', sans-serif;
+    color: black;
 }
 
 
