--- a/join.css
+++ b/join.css
@@ -3,12 +3,16 @@ body {
     /*圖片寬度為螢幕的100%*/
     background-repeat: no-repeat;
     /* 不重複圖片*/
+    /* opacity: 0.8;  */
 } 
 .section1.li{
     color: rgb(78, 31, 140);
-    font-size: 24px;
+    font-size: 18px;
 }
 h2{
     font-family: 'Noto Sans TC', sans-serif;
     /* color: coral; */
+}
+.row{
+    font-size: 24px;
 }
